teamapps-client/less/micro-components/ContextMenu.less
/*-
 * ========================LICENSE_START=================================
 * TeamApps
 * ---
 * Copyright (C) 2014 - 2024 TeamApps.org
 * ---
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * =========================LICENSE_END==================================
 */

.ContextMenu {
  position: absolute;
  background-color: var(--ta-bg-color); 
  border: 1px solid var(--ta-input-border-color);
  border-radius: var(--ta-border-radius);
  box-shadow: var(--ta-box-shadow-base);
  transition: opacity .3s;

  &.empty {
    display: flex;
    align-items: center;
    justify-content: center;

    height: 80px !important;

    .teamapps-spinner {
      width: 40px;
      height: 40px;
    }
  }

  &:not(.empty) {
    .teamapps-spinner {
      display: none;
    }

    > * {
      height: 100%;
    }
  }
}

